--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -26,7 +26,7 @@ jobs:
           tags: clloris/python-app:${{ steps.commit.outputs.short }}
 
   cd:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     needs: ci
     steps:
       - name: ArgoCD app Sync
