--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -36,12 +36,21 @@ jobs:
     steps:
       - name: Clone repo
         uses: actions/checkout@v4
+      
+      - name: Install pip
+        shell: bash
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y python3-pip
+          sudo rm -rf /usr/lib/python3.12/EXTERNALLY-MANAGED
+
       - name: Modify values file
         shell: bash
         run: |
           echo ${{ needs.ci.outputs.commit_id }}
           pip install yq
           yq -iy '.image.tag = "${{ needs.ci.outputs.commit_id }}"' 'charts/python-app/values.yaml'
+
       - name: Commit changes
         uses: EndBug/add-and-commit@v9
         with:
@@ -63,12 +72,14 @@ jobs:
       #   with:
       #     github_token: ${{ secrets.GITHUB_TOKEN }}
       #     branch: ${{ github.ref }}
+
       - name: InstallArgoCD CLI
         shell: bash
         run: |
           curl -ksSL -o argocd-linux-amd64 https://argocd-server.argocd/download/argocd-linux-amd64
           sudo install -m 555 argocd-linux-amd64 /usr/local/bin/argocd
           rm argocd-linux-amd64
+
       - name: ArgoCD app Sync
         shell: bash
         run: |
